@@ -35,7 +35,6 @@ public:
     bool getGrabKeyboard() const { return m_grabKb; }
     bool getStyledWidgets() const { return m_styledKnobs; }
     bool getAlwaysOnTop() const { return m_alwaysOnTop; }
-    bool getShowNames() const { return m_showLabels; }
     bool getRawKeyboard() const { return m_rawKeyboard; }
     void setInstrumentsFileName( const QString fileName );
     QString getInstrumentsFileName();
@@ -53,7 +52,6 @@ public slots:
     void setGrabKeyboard(bool value) { m_grabKb = value; }
     void setStyledWidgets(bool value) { m_styledKnobs = value; }
     void setAlwaysOnTop(bool value) { m_alwaysOnTop = value; }
-    void setShowNames(bool value) { m_showLabels = value; }
     void setRawKeyboard(bool value) { m_rawKeyboard = value; }
     void setKeyPressedColor(QColor value);
     void slotOpenInstrumentFile();
@@ -75,7 +73,6 @@ private:
     bool m_grabKb;
     bool m_styledKnobs;
     bool m_alwaysOnTop;
-    bool m_showLabels;
     bool m_rawKeyboard;
     QColor m_keyPressedColor;
     KeyboardMap m_keymap;
