@@ -1,3 +1,6 @@
+2009-12-06
+    * moved the "show note names" option from preferences dialog to view menu
+    
 2009-11-28
     * French translation, by Frank Kober
     * updated German translation
